Angel Ramires ajuste sobre la llamada y obserbaciones del video

--- a/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
+++ b/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
@@ -19,11 +19,11 @@
           <th scope="col">Importe</th>
           <th style="width: 250px;" scope="col">Concepto</th>
           <th scope="col">Monto a Reembolsar</th>
-          <th style="width: 150px;" scope="col">Observación</th>
+          <!-- <th style="width: 150px;" scope="col">Observación</th> -->
           <th scope="col">Comprobante Fiscal</th>
           <th scope="col">Impuestos</th>
           <th scope="col">Anexos</th>
-          <th scope="col">Adicional</th>
+          <!-- <th scope="col">Adicional</th> -->
           <th scope="col">Aplica</th>
         </tr>
       </thead>
@@ -71,11 +71,11 @@
               <em class="fa fa-file"></em>
             </button>
           </th>
-          <th class="text-center" scope="">
+          <!-- <th class="text-center" scope="">
             <button class="btn btn-primary btn-sm" (click)="modal('adicionales')">
               <em class="fa fa-file-archive"></em>
             </button>
-          </th>
+          </th> -->
           <th class="text-center" scope="">
             <input type="checkbox" class="mx-auto" formControlName="aplica">
           </th>
