--- a/src/app/modulos/bandeja-aprobacion/bandeja-aprobacion-mx/bandeja-aprobacion-mx.component.html
+++ b/src/app/modulos/bandeja-aprobacion/bandeja-aprobacion-mx/bandeja-aprobacion-mx.component.html
@@ -19,7 +19,7 @@
     <div *ngIf="globals.menuDinamico.bandeja_aprobacion_comprobacion_gasto_viaje" class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="consulta_amortizadores" id="comprobaciones_gastos_viaje"
         (change)="cambio('comprobacion_gasto_viaje')" value="amortizacion">
-      <label class="form-check-label" for="comprobaciones_gastos_viaje"> Comprobacion GV </label>
+      <label class="form-check-label" for="comprobaciones_gastos_viaje"> Comprobación GV </label>
     </div>
     <div *ngIf="globals.menuDinamico.bandeja_aprobacion_proveedor_informal" class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="consulta_amortizadores" id="proveedores_informales"
