[upd] texto cancelar en modal aprobacion

--- a/src/app/compartidos/comprobacion-components/modal-comprobante/modal-comprobante.component.html
+++ b/src/app/compartidos/comprobacion-components/modal-comprobante/modal-comprobante.component.html
@@ -56,7 +56,7 @@
       </div>
       <div class="row">
         <div class="col text-right">
-          <div class="btn mx-1 btn-danger" (click)="toggleModal()"> Continuar </div>
+          <div class="btn mx-1 btn-danger" (click)="toggleModal()"> Cerrar </div>
           <div class="btn mx-1 btn-primary" (click)="continuarComprobacion()"> Continuar </div>
         </div>
       </div>
