ajuste de errores , y ajuste de tabla gv

--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.css
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.css
@@ -1,3 +1,8 @@
 #tabla_departamentos_rci {
   max-width: 100% !important;
 }
+
+.ajustar {
+  /* word-break: break-all; */
+  max-width: 150px !important;
+}
