--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/componentes/filtro-comprobacion/filtro-comprobacion-gv.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/componentes/filtro-comprobacion/filtro-comprobacion-gv.component.html
@@ -53,14 +53,14 @@
                   <!--  <div class="form-row mt-3"> -->
 
                   <div class="col-md-3 mt-2">
-                    <label for="nombre">Fecha Cesación Desde </label>
+                    <label for="nombre">Fecha Creación Desde </label>
                     <my-date-picker [ngModelOptions]="{standalone: true}" [(ngModel)]="fech_ini" name="fechaIniViaje"
                       id="fecha_inicio_viaje_anticipo_gasto" [placeholder]="'Registro Desde'"
                       [options]="_globals.myDatePickerOptions" (dateChanged)="onFechaInicioViaje($event)">
                     </my-date-picker>
                   </div>
                   <div class="col-md-3 mt-2">
-                    <label for="nombre">Fecha Cesación Hasta </label>
+                    <label for="nombre">Fecha Creación Hasta </label>
                     <my-date-picker [ngModelOptions]="{standalone: true}" [(ngModel)]="fech_fin"
                       name="fechaFinViaje_anticipo_viaje" id="fechaFinViaje_status_sap" [placeholder]="'Registro Hasta'"
                       [options]="_globals.myDatePickerOptions" (dateChanged)="onFechaFinViaje($event)"></my-date-picker>
