--- a/src/app/modulos/bandeja-aprobacion/aprobacion-gastos-viaje/aprobacion-gastos-viaje.component.html
+++ b/src/app/modulos/bandeja-aprobacion/aprobacion-gastos-viaje/aprobacion-gastos-viaje.component.html
@@ -1,4 +1,4 @@
-<app-filtro-comprobacion-gv (filtrar)="filtrar($event)"></app-filtro-comprobacion-gv>
+<app-filtro-comprobacion-gv (filtrar)="filtrar($event)" [is_flujo_aprobacion]="true"></app-filtro-comprobacion-gv>
 
 <div class="row">
   <div class="col-lg-12">
