ajuste de carga comprobacion (digital, papel) label y carga digital pdf obligatorio

--- a/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
@@ -17,7 +17,7 @@
                 placeholder='Seleccione archivo...' id="archivo" name="archivo" />
             </div>
           </div>
-          <label> Archivo PDF </label>
+          <label> Archivo PDF <span class="requerido">*</span> </label>
           <div class="form-group">
             <div class="input-group input-file" name="xml_nc">
               <span class="input-group-btn">
