--- a/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-form/caja-chica-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-form/caja-chica-form.component.html
@@ -11,8 +11,8 @@
       <select class="form-control" [(ngModel)]="tipo_comprobante" id="tipo_comprobacion"
         aria-placeholder="Seleccione tipo de comprobante">
         <option value="" disabled selected> Seleccione tipo de comprobante... </option>
-        <option value="nacional"> Comprobación con XML </option>
-        <option value="internaconal"> Comprobación sin XML </option>
+        <option value="nacional"> Comprobación con XML (Digital) </option>
+        <option value="internaconal"> Comprobación sin XML (Papel) </option>
       </select>
     </div>
   </div>
