--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
@@ -12,8 +12,8 @@
       <select class="form-control" [(ngModel)]="tipo_comprobante" id="tipo_comprobacion"
         aria-placeholder="Seleccione tipo de comprobante">
         <option value="" disabled selected> Seleccione tipo de comprobante... </option>
-        <option value="nacional"> Comprobación con XML</option>
-        <option value="internacional"> Comprobación sin XML</option>
+        <option value="nacional"> Comprobación con XML (Digital) </option>
+        <option value="internacional"> Comprobación sin XML (Papel) </option>
       </select>
     </div>
   </div>
