[add] flujo aprobacion 2 nivel en form comprobacion

--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -78,12 +78,10 @@
               [disabled]="lista_comprobaciones.length === 0 && totales.total_gastado"
               (click)="enviarComprobacion(btn_enviar)"> Comprobar</button>
 
-            <button *ngIf="aprobacion_data && aprobacion_data.is_aprobacion && aprobacion_data.nivel_aproacion !== 2"
-              #btn_enviar class="btn btn-danger m-2"
+            <button *ngIf="aprobacion_data && aprobacion_data.is_aprobacion" #btn_enviar class="btn btn-danger m-2"
               [disabled]="lista_comprobaciones.length === 0 && totales.total_gastado"
               (click)="rechazarComprobacion(btn_enviar)"> Rechazar </button>
-            <button *ngIf="aprobacion_data && aprobacion_data.is_aprobacion && aprobacion_data.nivel_aproacion !== 2"
-              #btn_enviar class="btn btn-primary m-2"
+            <button *ngIf="aprobacion_data && aprobacion_data.is_aprobacion" #btn_enviar class="btn btn-primary m-2"
               [disabled]="lista_comprobaciones.length === 0 && totales.total_gastado"
               (click)="aprobarComprobacion(btn_enviar)"> Aprobar </button>
 
@@ -96,5 +94,6 @@
 
 <!-- Modal Conceptos Comprobantes -->
 <app-modal-conceptos-comprobantes #modalConceptos [comprobante]="comprobante"
-  (onGuardarConceptos)="onActualizarComprobantes($event)" [lista_cuentas]="lista_cuentas">
+  (onGuardarConceptos)="onActualizarComprobantes($event)" [lista_cuentas]="lista_cuentas"
+  [aprobacion_parcial]="aprobacion_parcial">
 </app-modal-conceptos-comprobantes>
